########################################################################
# Install public header files
########################################################################
install(FILES
    api.h
    focc.h
    fvc.h
    recc.h
    command_processor.h
    recc_decode.h DESTINATION include/amps
)
